# wetsocks

./: Cargo.toml  wetsocks.vim
crypto-wasm/: Cargo.toml
crypto-wasm/src/: lib.rs
frontend/src/: main.ts  store.ts  types.ts
server/: Cargo.toml
server/src/: constants.rs  http.rs  main.rs  service.rs  ws.rs
src/: main.rs  service.rs
static/: index.html  main.css  script.js
