[package]
name = "crypto-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.8"
rand_core = { version = "0.6", default-features = false } 
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
