[package]
name = "crypto-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
secp256k1 = { version = "0.29", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
